# RemiTA

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
allure-config/: categories.json  environment.properties
allure-results/: 0140a67e-6ead-4c91-9fc2-23dd2171f0fe-container.json  05b1a4ab-1915-4b73-8c71-711b4c5d27e2-container.json  06734b3f-c3bf-4e2c-9981-92204fc74ad4-result.json  0c2bb84c-94ff-4708-9bbe-3756c63c0dbe-container.json  1114422a-ecaf-47f4-a8fd-6a1efe881e7b-container.json  168744e3-4544-41e2-8956-d4a0e796cfa0-container.json  1b7f5e71-2cce-45e7-916b-021cd6c7b650-container.json  223348c3-a594-4314-9a45-6d09614c5fb1-container.json  25a0b882-81f8-49a8-bcb1-937c3af62eee-result.json  25d72fc3-9e51-43ee-a710-4a22935a8e88-result.json  28550128-a063-4bd0-ac13-edae1ee063fe-result.json  2d21d680-ef31-4eb4-8cb9-1da6cde0be9e-container.json  2d779166-958a-4315-822c-82f30b8300a7-container.json  325aa0a4-5899-4cb6-96d8-73cfa0463ec7-container.json  32ab953c-479d-42b1-b86a-9246f0329187-result.json  32dffb91-6d2e-42f7-8af7-ec23ab8049a2-container.json  3402b93b-0c23-4ae5-8249-7a717fcd5b6c-container.json  393aaa2d-1107-4eed-a047-19c8d7b3dd8b-result.json  4224407d-0783-40b5-ba4a-5159c6be6f51-container.json  4455e5e2-c2de-4751-83b9-58436fb0cdeb-container.json  4d44d3a8-b10e-47b5-ab31-c34786a552d9-container.json  50777be2-aa44-40a0-8739-e7b7e519a804-container.json  5099c17e-e2b0-4b2a-9f5f-61df8bd3dd83-container.json  534538ed-9f6b-47f7-87ea-d0f93f25bfef-container.json  53c8049a-b6d7-475b-9a1f-8d5892d7b781-result.json  5738090c-c3ec-474e-b7d4-39be0162e2fe-result.json  57d566d6-a294-402d-b9fc-e7adc2dc531d-container.json  5ad7dd56-b47c-40b6-b704-b2b80d3006e7-container.json  5e146a26-95ab-4744-918d-7b91f4926120-container.json  5ea40821-4b81-4e7b-bbdc-f805ae5bc754-container.json  609d9560-942c-4d8b-be36-e9ba8cedb588-container.json  (+38 more)
(+57 files in other folders)
